[gd_scene load_steps=12 format=3 uid="uid://bgtbv2iq43kru"]

[ext_resource type="Script" path="res://scenes/battle_scene.gd" id="1_7ul4m"]
[ext_resource type="PackedScene" uid="uid://c2hixb1emgvvq" path="res://scenes/battle_char.tscn" id="2_7aox0"]
[ext_resource type="PackedScene" uid="uid://b5hiemgtytg3" path="res://scenes/bg_root.tscn" id="2_d7hhp"]
[ext_resource type="Texture2D" uid="uid://dv43001dq4qm2" path="res://art/my/char/dual_wield_stub_bust.png" id="4_aqxti"]
[ext_resource type="Texture2D" uid="uid://bw1an5bue338b" path="res://art/my/ui/qte_btn/down/normal.png" id="6_tqanu"]
[ext_resource type="Texture2D" uid="uid://w21ax7g26u6m" path="res://art/my/ui/qte_btn/up/normal.png" id="7_qko18"]
[ext_resource type="Texture2D" uid="uid://cxdgxxj67q44r" path="res://art/my/ui/qte_btn/left/normal.png" id="8_ec1dm"]
[ext_resource type="Texture2D" uid="uid://e8v7ym1vpess" path="res://art/my/ui/qte_btn/right/normal.png" id="8_gpuf6"]
[ext_resource type="PackedScene" uid="uid://fwq33p5strsa" path="res://combat_unit_info.tscn" id="13_jnomy"]

[sub_resource type="Curve2D" id="Curve2D_1ljv2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 3.19446, 0, 0, 0, 0, 0, 435.013, -100, 0, 0, 0, 0, 666.831, -118.182)
}
point_count = 3

[sub_resource type="Curve2D" id="Curve2D_rprp2"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 1036.36, 4.54541, 0, 0, 0, 0, 631.818, -109.091, 0, 0, 0, 0, 363.636, -122.727)
}
point_count = 3

[node name="battle_scene" type="Node2D"]
position = Vector2(564, 334)
script = ExtResource("1_7ul4m")

[node name="bg_root" parent="." instance=ExtResource("2_d7hhp")]

[node name="path_left" type="Path2D" parent="."]
position = Vector2(-148.649, 0)
curve = SubResource("Curve2D_1ljv2")

[node name="path_follow" type="PathFollow2D" parent="path_left"]
position = Vector2(3.19446, 0)
rotation = -0.227567
rotates = false
loop = false

[node name="battle_char" parent="path_left/path_follow" instance=ExtResource("2_7aox0")]
position = Vector2(-3.112, 2.08165e-12)
rotation = 0.227567

[node name="path_right" type="Path2D" parent="."]
curve = SubResource("Curve2D_rprp2")

[node name="path_follow" type="PathFollow2D" parent="path_right"]
position = Vector2(1036.36, 4.54541)
rotation = -2.86775
rotates = false
loop = false

[node name="battle_char" parent="path_right/path_follow" instance=ExtResource("2_7aox0")]
position = Vector2(7.616, 2.08165e-12)
rotation = 2.86775

[node name="ui_root" type="CanvasLayer" parent="."]

[node name="ui" type="Control" parent="ui_root"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="player_info" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 1
offset_right = 500.0
offset_bottom = 120.0

[node name="hbox" type="HBoxContainer" parent="ui_root/ui/player_info"]
layout_mode = 2

[node name="bust" type="TextureRect" parent="ui_root/ui/player_info/hbox"]
layout_mode = 2
texture = ExtResource("4_aqxti")
expand_mode = 2

[node name="combat_unit_info" parent="ui_root/ui/player_info/hbox" instance=ExtResource("13_jnomy")]
layout_mode = 2

[node name="npc_info" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -491.0
offset_right = 9.00024
offset_bottom = 161.0
grow_horizontal = 0

[node name="hbox" type="HBoxContainer" parent="ui_root/ui/npc_info"]
layout_mode = 2

[node name="combat_unit_info" parent="ui_root/ui/npc_info/hbox" instance=ExtResource("13_jnomy")]
layout_mode = 2

[node name="bust" type="TextureRect" parent="ui_root/ui/npc_info/hbox"]
layout_mode = 2
texture = ExtResource("4_aqxti")
expand_mode = 2

[node name="npc_turn" type="PanelContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 285.0
offset_top = 270.0
offset_right = 883.0
offset_bottom = 467.0
theme_type_variation = &"PanelLargeSticker"

[node name="title" type="Label" parent="ui_root/ui/npc_turn"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "NPC Turn"
horizontal_alignment = 1

[node name="action_counter" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 425.0
offset_top = 587.0
offset_right = 725.0
offset_bottom = 627.0

[node name="progress_bar" type="ProgressBar" parent="ui_root/ui/action_counter"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2

[node name="player_choices" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 926.0
offset_top = 561.0
offset_right = 1078.0
offset_bottom = 646.0

[node name="btn" type="MenuButton" parent="ui_root/ui/player_choices"]
layout_mode = 2
theme_type_variation = &"FlatMenuButton"
theme_override_font_sizes/font_size = 40
text = "Action"
flat = false
switch_on_hover = true
item_count = 2
popup/item_0/text = "Attack"
popup/item_0/id = 0
popup/item_1/text = "Inventory"
popup/item_1/id = 1

[node name="close_inventory_btn" type="Button" parent="ui_root/ui/player_choices"]
layout_mode = 2
text = "Close"

[node name="player_inventory" type="Control" parent="ui_root/ui"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -126.0
offset_top = -117.0
offset_right = -126.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2

[node name="panel" type="PanelContainer" parent="ui_root/ui/player_inventory"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 190.0
scale = Vector2(0.5, 0.5)
theme_type_variation = &"PanelMediumSticker"

[node name="grid" type="GridContainer" parent="ui_root/ui/player_inventory/panel"]
layout_mode = 2
columns = 3

[node name="player_mod_draw" type="VBoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 50.0
offset_top = 200.0
offset_right = 90.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)

[node name="npc_mod_draw" type="VBoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_left = 1050.0
offset_top = 200.0
offset_right = 1090.0
offset_bottom = 240.0
scale = Vector2(0.5, 0.5)

[node name="options_btn" type="Button" parent="ui_root/ui"]
layout_mode = 0
offset_left = 5.0
offset_top = 563.0
offset_right = 196.0
offset_bottom = 638.0
text = "Options"

[node name="qte_onscreen_directional_btns" type="BoxContainer" parent="ui_root/ui"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="down" type="TextureButton" parent="ui_root/ui"]
layout_mode = 0
offset_left = 81.0
offset_top = 562.0
offset_right = 241.0
offset_bottom = 722.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("6_tqanu")

[node name="up" type="TextureButton" parent="ui_root/ui"]
layout_mode = 0
offset_left = 80.0
offset_top = 469.0
offset_right = 240.0
offset_bottom = 629.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("7_qko18")

[node name="left" type="TextureButton" parent="ui_root/ui"]
layout_mode = 0
offset_left = 9.0
offset_top = 516.0
offset_right = 169.0
offset_bottom = 676.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_ec1dm")

[node name="right" type="TextureButton" parent="ui_root/ui"]
layout_mode = 0
offset_left = 157.0
offset_top = 516.0
offset_right = 317.0
offset_bottom = 676.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("8_gpuf6")

[node name="cam" type="Camera2D" parent="."]
position = Vector2(465, -282)
zoom = Vector2(0.5, 0.5)

[connection signal="button_up" from="ui_root/ui/player_choices/close_inventory_btn" to="." method="_on_close_inventory_btn_button_up"]
[connection signal="button_up" from="ui_root/ui/options_btn" to="." method="_on_options_btn_button_up"]
